# simple_chat_server

./: Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
chat_server/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
chat_server/templates/: chatroom.html
chats/: admin.py  constants.py  models.py  urls.py  views.py
chats/migrations/: 0001_initial.py
chats/services/: chat_log.py  chatroom_join.py  consumer.py
chats/services/application/: chat_join.py  consumer.py
chats/services/domain/: chatroom_join.py  message.py  state_log.py
